fixup paul updates

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -56,7 +56,7 @@ include::{partialsdir}/attributes.adoc[]
 
 ** xref:data-sync.adoc[{sync-service}]
 *** xref:data-sync.adoc#introduction[Introduction]
-*** xref:data-sync.adoc#sync-server[Server]
+*** xref:data-sync.adoc#sync-server[Voyager Server]
 **** xref:data-sync.adoc#sync-server-getting-started[Getting Started]
 **** xref:data-sync.adoc#sync-server-offline-and-conflict[Offline and Conflicts]
 **** xref:data-sync.adoc#sync-server-data-access[Data Access]
@@ -64,14 +64,7 @@ include::{partialsdir}/attributes.adoc[]
 **** xref:data-sync.adoc#sync-server-auth[Authentication and Authorization]
 **** xref:data-sync.adoc#sync-server-metrics[Metrics]
 **** xref:data-sync.adoc#sync-server-audit-logs[Audit Logs]
-*** xref:data-sync.adoc#getting-started[OpenShift APB]
-**** xref:data-sync.adoc#sync-server-getting-started-overview[Overview]
-**** xref:data-sync.adoc#building-and-publishing-the-container[Prepare Container]
-**** xref:data-sync.adoc#provisioning-data-sync-service[Provisioning Overview]
-**** xref:data-sync.adoc#sync-server-example-basic[Running Example Application]
-**** xref:data-sync.adoc#sync-server-getting-started-showcase-app[Showcase App]
-**** xref:data-sync.adoc#sync-server-binding-keycloak[Bind KeyCloak]
-*** xref:data-sync.adoc#sync-js-client[Javascript Client]
+*** xref:data-sync.adoc#sync-js-client[Voyager Client]
 **** xref:data-sync.adoc#sync-js-client-getting-started[Getting Started]
 **** xref:data-sync.adoc#sync-js-client-offline-and-conflict[Offline and Conflicts]
 **** xref:data-sync.adoc#sync-js-client-data-access[Data Access]
@@ -79,6 +72,12 @@ include::{partialsdir}/attributes.adoc[]
 **** xref:data-sync.adoc#sync-js-client-auth[Authentication and Authorization]
 **** xref:data-sync.adoc#sync-js-client-metrics[Metrics]
 **** xref:data-sync.adoc#sync-js-client-audit-logs[Audit Logs]
+*** xref:data-sync.adoc#sync-server-openshift[Running {sync-service}]
+**** xref:data-sync.adoc#sync-server-getting-started-overview[Overview]
+**** xref:data-sync.adoc#building-and-publishing-the-container[Prepare Container]
+**** xref:data-sync.adoc#provisioning-data-sync-service[Provisioning Overview]
+**** xref:data-sync.adoc#provisioning-data-sync-service[Configuring Mobile App]
+**** xref:data-sync.adoc#sync-server-binding-keycloak[Binding KeyCloak]
 ** xref:device-security.adoc[{device-security-service}]
 *** xref:device-security.adoc#introduction[Introduction]
 *** xref:device-security.adoc#setup[Setting Up]
