--- a/modules/ROOT/pages/_partials/sync/getting-started-overview.adoc
+++ b/modules/ROOT/pages/_partials/sync/getting-started-overview.adoc
@@ -1,3 +1,3 @@
 = Overview
 
-TODO
+{sync-service} includes an Ansible Playbook Bundle to facilitate deploying {sync-service} based servers into an OpenShift environment.
